src/bindings/gles_bindings.rs

extern "C" {
    pub fn glDeleteTextures(n: GLsizei, textures: *const GLuint);
}
extern "C" {
    pub fn glDepthFunc(func: GLenum);
}
extern "C" {
    pub fn glDepthMask(flag: GLboolean);
}
extern "C" {
    pub fn glDepthRangex(n: GLfixed, f: GLfixed);
}
extern "C" {
    pub fn glDisable(cap: GLenum);
}
extern "C" {
    pub fn glDisableClientState(array: GLenum);
}
extern "C" {
    pub fn glDrawArrays(mode: GLenum, first: GLint, count: GLsizei);
}
extern "C" {
    pub fn glDrawElements(
        mode: GLenum,
        count: GLsizei,
        type_: GLenum,
        indices: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn glEnable(cap: GLenum);
}
extern "C" {
    pub fn glEnableClientState(array: GLenum);
}
extern "C" {
    pub fn glFinish();
}
extern "C" {
    pub fn glFlush();
}
extern "C" {
    pub fn glFogx(pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glFogxv(pname: GLenum, param: *const GLfixed);
}
extern "C" {
    pub fn glFrontFace(mode: GLenum);
}
extern "C" {
    pub fn glFrustumx(l: GLfixed, r: GLfixed, b: GLfixed, t: GLfixed, n: GLfixed, f: GLfixed);
}
extern "C" {
    pub fn glGetBooleanv(pname: GLenum, data: *mut GLboolean);
}
extern "C" {
    pub fn glGetBufferParameteriv(target: GLenum, pname: GLenum, params: *mut GLint);
}
extern "C" {
    pub fn glGetClipPlanex(plane: GLenum, equation: *mut GLfixed);
}
extern "C" {
    pub fn glGenBuffers(n: GLsizei, buffers: *mut GLuint);
}
extern "C" {
    pub fn glGenTextures(n: GLsizei, textures: *mut GLuint);
}
extern "C" {
    pub fn glGetError() -> GLenum;
}
extern "C" {
    pub fn glGetFixedv(pname: GLenum, params: *mut GLfixed);
}
extern "C" {
    pub fn glGetIntegerv(pname: GLenum, data: *mut GLint);
}
extern "C" {
    pub fn glGetLightxv(light: GLenum, pname: GLenum, params: *mut GLfixed);
}
extern "C" {
    pub fn glGetMaterialxv(face: GLenum, pname: GLenum, params: *mut GLfixed);
}
extern "C" {
    pub fn glGetPointerv(pname: GLenum, params: *mut *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn glGetString(name: GLenum) -> *const GLubyte;
}
extern "C" {
    pub fn glGetTexEnviv(target: GLenum, pname: GLenum, params: *mut GLint);
}
extern "C" {
    pub fn glGetTexEnvxv(target: GLenum, pname: GLenum, params: *mut GLfixed);
}
extern "C" {
    pub fn glGetTexParameteriv(target: GLenum, pname: GLenum, params: *mut GLint);
}
extern "C" {
    pub fn glGetTexParameterxv(target: GLenum, pname: GLenum, params: *mut GLfixed);
}
extern "C" {
    pub fn glHint(target: GLenum, mode: GLenum);
}
extern "C" {
    pub fn glIsBuffer(buffer: GLuint) -> GLboolean;
}
extern "C" {
    pub fn glIsEnabled(cap: GLenum) -> GLboolean;
}
extern "C" {
    pub fn glIsTexture(texture: GLuint) -> GLboolean;
}
extern "C" {
    pub fn glLightModelx(pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glLightModelxv(pname: GLenum, param: *const GLfixed);
}
extern "C" {
    pub fn glLightx(light: GLenum, pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glLightxv(light: GLenum, pname: GLenum, params: *const GLfixed);
}
extern "C" {
    pub fn glLineWidthx(width: GLfixed);
}
extern "C" {
    pub fn glLoadIdentity();
}
extern "C" {
    pub fn glLoadMatrixx(m: *const GLfixed);
}
extern "C" {
    pub fn glLogicOp(opcode: GLenum);
}
extern "C" {
    pub fn glMaterialx(face: GLenum, pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glMaterialxv(face: GLenum, pname: GLenum, param: *const GLfixed);
}
extern "C" {
    pub fn glMatrixMode(mode: GLenum);
}
extern "C" {
    pub fn glMultMatrixx(m: *const GLfixed);
}
extern "C" {
    pub fn glMultiTexCoord4x(texture: GLenum, s: GLfixed, t: GLfixed, r: GLfixed, q: GLfixed);
}
extern "C" {
    pub fn glNormal3x(nx: GLfixed, ny: GLfixed, nz: GLfixed);
}
extern "C" {
    pub fn glNormalPointer(type_: GLenum, stride: GLsizei, pointer: *const ::std::os::raw::c_void);
}
extern "C" {
    pub fn glOrthox(l: GLfixed, r: GLfixed, b: GLfixed, t: GLfixed, n: GLfixed, f: GLfixed);
}
extern "C" {
    pub fn glPixelStorei(pname: GLenum, param: GLint);
}
extern "C" {
    pub fn glPointParameterx(pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glPointParameterxv(pname: GLenum, params: *const GLfixed);
}
extern "C" {
    pub fn glPointSizex(size: GLfixed);
}
extern "C" {
    pub fn glPolygonOffsetx(factor: GLfixed, units: GLfixed);
}
extern "C" {
    pub fn glPopMatrix();
}
extern "C" {
    pub fn glPushMatrix();
}
extern "C" {
    pub fn glReadPixels(
        x: GLint,
        y: GLint,
        width: GLsizei,
        height: GLsizei,
        format: GLenum,
        type_: GLenum,
        pixels: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn glRotatex(angle: GLfixed, x: GLfixed, y: GLfixed, z: GLfixed);
}
extern "C" {
    pub fn glSampleCoverage(value: GLfloat, invert: GLboolean);
}
extern "C" {
    pub fn glSampleCoveragex(value: GLclampx, invert: GLboolean);
}
extern "C" {
    pub fn glScalex(x: GLfixed, y: GLfixed, z: GLfixed);
}
extern "C" {
    pub fn glScissor(x: GLint, y: GLint, width: GLsizei, height: GLsizei);
}
extern "C" {
    pub fn glShadeModel(mode: GLenum);
}
extern "C" {
    pub fn glStencilFunc(func: GLenum, ref_: GLint, mask: GLuint);
}
extern "C" {
    pub fn glStencilMask(mask: GLuint);
}
extern "C" {
    pub fn glStencilOp(fail: GLenum, zfail: GLenum, zpass: GLenum);
}
extern "C" {
    pub fn glTexCoordPointer(
        size: GLint,
        type_: GLenum,
        stride: GLsizei,
        pointer: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn glTexEnvi(target: GLenum, pname: GLenum, param: GLint);
}
extern "C" {
    pub fn glTexEnvx(target: GLenum, pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glTexEnviv(target: GLenum, pname: GLenum, params: *const GLint);
}
extern "C" {
    pub fn glTexEnvxv(target: GLenum, pname: GLenum, params: *const GLfixed);
}
extern "C" {
    pub fn glTexImage2D(
        target: GLenum,
        level: GLint,
        internalformat: GLint,
        width: GLsizei,
        height: GLsizei,
        border: GLint,
        format: GLenum,
        type_: GLenum,
        pixels: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn glTexParameteri(target: GLenum, pname: GLenum, param: GLint);
}
extern "C" {
    pub fn glTexParameterx(target: GLenum, pname: GLenum, param: GLfixed);
}
extern "C" {
    pub fn glTexParameteriv(target: GLenum, pname: GLenum, params: *const GLint);
}
extern "C" {
    pub fn glTexParameterxv(target: GLenum, pname: GLenum, params: *const GLfixed);
}
extern "C" {
    pub fn glTexSubImage2D(
        target: GLenum,
        level: GLint,
        xoffset: GLint,
        yoffset: GLint,
        width: GLsizei,
        height: GLsizei,
        format: GLenum,
        type_: GLenum,
        pixels: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn glTranslatex(x: GLfixed, y: GLfixed, z: GLfixed);
}
extern "C" {
    pub fn glVertexPointer(
        size: GLint,
        type_: GLenum,
        stride: GLsizei,
        pointer: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn glViewport(x: GLint, y: GLint, width: GLsizei, height: GLsizei);
}
extern "C" {
    pub fn glPointSizePointerOES(
        type_: GLenum,
        stride: GLsizei,
        pointer: *const ::std::os::raw::c_void,
    );
}
